<resources>
    <string name="app_name">Tlaloc TBD</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_code">Código</string>
    <string name="info_code_label">Comuníquese con su médico para obtener su código.\n Si ya tiene un código, ingréselo en el espacio que se muestra. También puede omitir este proceso e ingresarlo más tarde.</string>
    <string name="info_code_no_skip_label">Comuníquese con su médico para obtener su código.\n Si ya tiene un código, ingréselo en el espacio que se muestra.</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_out">Salir</string>
    <string name="action_skip_sign_in">Más tarde</string>
    <string name="action_sign_in_short">Inicio de sesión</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_code">Código inválido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Inicio de sesión falló"</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="btn_OK_label">OK</string>
    <string name="btn_skip_label">Siguiente</string>
    <string name="btn_done_label">Listo</string>

    <string name="title_home">Inicio</string>
    <string name="title_scanner">Cámara</string>
    <string name="title_account">Mi Perfil</string>
    <string name="label_instructions">Comience a escanear y vea los resultados aquí</string>

    <string name="label_instruction_title">Instrucciones</string>
    <string name="text_instruction_step_1">Coloca tu pie sobre una superficie plana y con un fondo claro.</string>
    <string name="text_instruction_step_2">Asegurate de que el pie se encuentre dentro del recuadro blanco.</string>

    <string name="category_initial_label">Inicial</string>
    <string name="category_moderate_label">Intermedio</string>
    <string name="category_advanced_label">Avanzado</string>
    <string name="category_none_label">Saludable</string>

    <string name="error_message_on_request">Ups! Algo salió mal...</string>
    <string name="error_message_on_request_detail_internet">Asegurese de estar conectado a Internet</string>
    <string name="error_message_on_request_detail_500">Intente más tarde</string>
    <string name="error_message_on_request_detail_image">Siga las instrucciones de cómo tomar la foto</string>

    <string name="name_label">Nombre:</string>
    <string name="phone_label">Teléfono:</string>
    <string name="code_label">Código:</string>
    <string name="doctor_email_label">Email:</string>
    <string name="doctor_hospital_label">Hospital:</string>

    <string name="your_info_label">Tu información</string>
    <string name="doctor_info_label">Información del doctor</string>
</resources>
