<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.scanner.InstructionsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_instruction_title"
        android:textSize="36sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/image_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_guide"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/pata_guia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/image_guide"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/camera_guide"
                android:text="1"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/text_instruction_step_1"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/camera_guide"
                android:text="2"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/text_instruction_step_2"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/btn_OK_label"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>