<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerActivity">

    <TextView
        android:id="@+id/results_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Resultados"
        android:textSize="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorPrimaryBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/result_container"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/loading_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/result_container"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/code_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading..."
            android:textSize="30dp"
            android:layout_alignParentLeft="true"/>

        <ProgressBar
            android:id="@+id/progress_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/loading_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/error_cloud"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/error_message_on_request"
            android:textSize="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/error_message_on_request_detail_image"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:text="Reintentar"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/result_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:paddingBottom="24dp"
        android:elevation="2dp"
        android:background="@drawable/result_item_shape"
        app:layout_constraintTop_toBottomOf="@+id/loading_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/image_result"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/result_image_one"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Estado:"
                android:textSize="25dp"
                android:layout_weight=".5"
                android:textColor="@color/colorPrimaryBlue"/>

            <TextView
                android:id="@+id/status_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="RIP"
                android:textSize="20dp"
                android:layout_weight=".5"
                android:textColor="@color/colorPrimaryBlue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Fecha:"
                android:textSize="20dp"
                android:layout_weight=".5"
                android:textColor="@color/colorPrimaryBlue"/>

            <TextView
                android:id="@+id/date_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="28-11-2020"
                android:textSize="20dp"
                android:layout_weight=".5"
                android:textColor="@color/colorPrimaryBlue"/>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/btn_done_label"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>